--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@elbasel/app",
+  "name": "@elbasel/sidebar",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
@@ -10,6 +10,7 @@
     "eslint": "^8.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
